image support inline

--- a/discussion/type-test.html
+++ b/discussion/type-test.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <section class="typography proxima">
-      <span class="typography__family">Proxima</span>
+      <span class="typography__family">Proxima Nova</span>
     	<h1 class="typography__header">Manage HVAC Digitally</h1>
     	<h2 class="typography__sub-header">Save you 18-40% HVAC replacement, everytime.</h2>
       <h3 class="typography__caps">This is all caps</h3>
@@ -20,7 +20,7 @@
     	</p>
     </section>
     <section class="typography futura">
-      <span class="typography__family">Futura</span>
+      <span class="typography__family">Futura PT</span>
       <h1 class="typography__header">Manage HVAC Digitally</h1>
       <h2 class="typography__sub-header">Save you 18-40% HVAC replacement, everytime.</h2>
       <h3 class="typography__caps">This is all caps</h3>
@@ -28,7 +28,7 @@
       </p>
     </section>
     <section class="typography myriad">
-      <span class="typography__family">Myriad</span>
+      <span class="typography__family">Myriad Pro</span>
       <h1 class="typography__header">Manage HVAC Digitally</h1>
       <h2 class="typography__sub-header">Save you 18-40% HVAC replacement, everytime.</h2>
       <h3 class="typography__caps">This is all caps</h3>
@@ -36,7 +36,7 @@
       </p>
     </section>
     <section class="typography aktiv">
-      <span class="typography__family">Aktiv</span>
+      <span class="typography__family">Aktiv Grotesk</span>
       <h1 class="typography__header">Manage HVAC Digitally</h1>
       <h2 class="typography__sub-header">Save you 18-40% HVAC replacement, everytime.</h2>
       <h3 class="typography__caps">This is all caps</h3>
