--- a/index.html
+++ b/index.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
-<html class="teal"> 
+<html> 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- @include _favicon -->
   <!-- @stylesheet style -->
-  <title>Ravti | Digitize Your HVAC</title> 
+  <title>Less Smoke, More Heat</title> 
   <script src="//use.typekit.net/pti5qzj.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 </head>
-<body>
-  <main>
-  	<section class="timeline">
-
-	  	<h1 class="timeline__title">Ravti Website Design</h1>
-
-	  	<article class="timeline__period">
-		  	<h2 class="timeline__period-topic">Typography Samples</h2>
-		  	<span class="timeline__period-date">October 13, 2014</span>
-		  	<dl class="timline__period-list">
-		  		<dd><a href="/discussion/type-test.html">View Type Test</a></dd>
-		  	</dl>
-	  	</article>
-
-	  	<article class="timeline__period">
-	  	<h2 class="timeline__period-topic">Mood Board</h2>
-	  	<span class="timeline__period-date">October 12, 2014</span>
-	  	<a href="http://drp.mk/Q5xC">
-	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/183d9d23330be0cf51b068df3da12eea3a61c4d1/Screen%20Shot%202014-10-13%20at%203.08.47%20PM.png" />
-	  	</a>
-	  	</article>
-	  	
-  	</section>
-  </main>
+<body class="letterhead">
+  <!-- @include _signature -->
 </body>
 </html>
