added initial explorations

--- a/ravti.html
+++ b/ravti.html
@@ -16,6 +16,16 @@
 	  	<h1 class="timeline__title">Ravti Website Design</h1>
 
 	  	<article class="timeline__period">
+		  	<h2 class="timeline__period-topic">Corporate Site Explorations</h2>
+		  	<span class="timeline__period-date">October 13, 2014</span>
+		  	<dl class="timline__period-list">
+		  		<dd><a href="http://cdn2.dropmark.com/72454/b28eb592d9cce7f13e0ae67907efebfcd2a2a43c/Bold__Mobile-Portrait.png">Solid Bold Message (Small Screen)</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/c9fa76138dfbfe6cf4aebcd128ab6223f06822b7/Bold__Desktop-HD.png">Solid Bold Message (Wide Screen)</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/741bbf8e44d657575d5210868048ab58a6497c85/Bold__site-structure.png">Solid Bold Message (Design System)</a></dd>
+		  	</dl>
+	  	</article>
+
+	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">Typography Samples</h2>
 		  	<span class="timeline__period-date">October 13, 2014</span>
 		  	<dl class="timline__period-list">
