added signature and exploration alignments

--- a/ravti.html
+++ b/ravti.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html class="teal"> 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,10 +9,10 @@
   <script src="//use.typekit.net/pti5qzj.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 </head>
-<body class="teal">
+<body>
   <main>
   	<section class="timeline">
-
+  		<!-- @include _signature -->
 	  	<h1 class="timeline__title">Ravti Website Design</h1>
 
 	  	<article class="timeline__period">
