link to key value add illustrations

--- a/ravti.html
+++ b/ravti.html
@@ -16,6 +16,14 @@
 	  	<h1 class="timeline__title">Ravti Website Design</h1>
 
 	  	<article class="timeline__period">
+		  	<h2 class="timeline__period-topic">Illustrations: Key Value Adds</h2>
+		  	<span class="timeline__period-date">October 14, 2014</span>
+		  	<a href="http://cdn2.dropmark.com/72454/0451b7487cbf7de8ca58ab3ce19a62080135e2df/Screen%20Shot%202014-10-14%20at%207.49.37%20PM.png">
+	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/0451b7487cbf7de8ca58ab3ce19a62080135e2df/Screen%20Shot%202014-10-14%20at%207.49.37%20PM.png" />
+	  	</a>
+	  	</article>
+
+	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">Element Explorations: Hero</h2>
 		  	<span class="timeline__period-date">October 14, 2014</span>
 		  	<dl class="timline__period-list">
