--- a/ravti/discussion/hero-1.html
+++ b/ravti/discussion/hero-1.html
@@ -27,7 +27,7 @@
 	  	<div class="prompt">
 	  		<div class="prompt__cta">
 		  		<h1 class="prompt__tagline">Your Commercial HVAC mess, Solved.</h1>
-		  		<p class="prompt__copy">Meet the next generation of HVAC. A place where you save 18-40% on every HVAC replacement,everytime.</p>
+		  		<p class="prompt__copy">Meet the next generation of HVAC. A place where you save 18-40% on HVAC replacements, everytime.</p>
 		  		<span class="prompt__button">See how it works</span>
 	  		</div>
 	  	</div>
@@ -52,26 +52,29 @@
 			</div>
 		</form>
 	</section>
-	<section class="trust">
-		<figure class="trust__figure">
-			<img class="trust__figure-image" src="http://cdn2.dropmark.com/72454/fce06606f5eeb5aa7223e9a873e4688f3e9a98ad/ipad-mock_preview.jpg" />
-		</figure>
-		<h2 class="trust__tagline">Your HVAC, managed digitally.</h2>
-		<h3 class="trust__sub-heading">Smart, Transparent, Easy.</h3>
-	</section>
 	<section class="value">
+		<article class="value__offering time">
+			<h4 class="value__offering-benefit">Time Saving</h4>
+			<p class="value__offering-copy">We do all of the leg work. Once we have the project scope, we procure multiple bids and assemble them into a single proposal.</p>
+		</article>
 		<article class="value__offering coop">
-			<h4>Cooperative Purchasing</h4>
-			<p>We aggregate the HVAC expenditures of our users to increase the purchasing power of each individual.</p>
+			<h4 class="value__offering-benefit">Cooperative Purchasing</h4>
+			<p class="value__offering-copy">We aggregate the HVAC expenditures of our users to increase the purchasing power of each individual.</p>
 		</article>
 		<article class="value__offering wholesale">
-			<h4>Wholesale Pricing</h4>
-			<p>We buy everything direct from the manufacturer, avoiding a level of markup versus buying traditionally.</p>
+			<h4 class="value__offering-benefit">Wholesale Pricing</h4>
+			<p class="value__offering-copy">We buy everything direct from the manufacturer, avoiding a level of markup versus buying traditionally.</p>
 		</article>
-		<article class="value__offering time">
-			<h4>Time Saving</h4>
-			<p>We do all of the leg work. Once we have the project scope, we procure multiple bids and assemble them into a single proposal.</p>
-		</article>
+	</section>
+	<section class="accent-section">
+		<div class="trust">
+			<figure class="trust__figure">
+				<img class="trust__figure-image" src="http://cdn2.dropmark.com/72454/97c08054b08381f4b6c7f3261a7e5097818be596/ipad-mock_preview.jpg" />
+			</figure>
+			<h2 class="trust__tagline">HVAC, managed digitally.</h2>
+			<h3 class="trust__sub-heading">It's Smart, Transparent, &amp; Easy.</h3>
+			<span class="trust__button">Get Started</span>
+		</div>
 	</section>
   </main>
 </body>
