updates to features

--- a/ravti/discussion/hero-1.html
+++ b/ravti/discussion/hero-1.html
@@ -54,15 +54,15 @@
 	</section>
 	<section class="value">
 		<article class="value__offering time">
-			<h4 class="value__offering-benefit">Time Saving</h4>
+			<h3 class="value__offering-benefit">Time Saving</h3>
 			<p class="value__offering-copy">We do all of the leg work. Once we have the project scope, we procure multiple bids and assemble them into a single proposal.</p>
 		</article>
 		<article class="value__offering coop">
-			<h4 class="value__offering-benefit">Cooperative Purchasing</h4>
+			<h3 class="value__offering-benefit">Cooperative Purchasing</h3>
 			<p class="value__offering-copy">We aggregate the HVAC expenditures of our users to increase the purchasing power of each individual.</p>
 		</article>
 		<article class="value__offering wholesale">
-			<h4 class="value__offering-benefit">Wholesale Pricing</h4>
+			<h3 class="value__offering-benefit">Wholesale Pricing</h3>
 			<p class="value__offering-copy">We buy everything direct from the manufacturer, avoiding a level of markup versus buying traditionally.</p>
 		</article>
 	</section>
@@ -72,8 +72,31 @@
 				<img class="trust__figure-image" src="http://cdn2.dropmark.com/72454/97c08054b08381f4b6c7f3261a7e5097818be596/ipad-mock_preview.jpg" />
 			</figure>
 			<h2 class="trust__tagline">HVAC, managed digitally.</h2>
-			<h3 class="trust__sub-heading">It's Smart, Transparent, &amp; Easy.</h3>
+			<h4 class="trust__sub-heading">It's Smart, Transparent, &amp; Easy.</h4>
 			<span class="trust__button">Get Started</span>
+		</div>
+	</section>
+	<section>
+		<div class="feature-glance">
+			<h2 class="feature__tagline">The key to happiness</h2>
+		</div>
+		<div class="feature-list">
+			<article class="feature__offering">
+				<h3 class="feature__offering-benefit money-feature">Economically Efficient</h3>
+				<p class="feature__offering-copy">Time is money. All of your HVAC needs with the click of a button - the days of picking up the phone to call vendors are over.</p>
+			</article>
+			<article class="feature__offering">
+				<h3 class="feature__offering-benefit cloud-feature">Inventory management from anywhere</h3>
+				<p class="feature__offering-copy">All of your facilities' equipment is stored on the cloud; around the clock access to your inventory.</p>
+			</article>
+			<article class="feature__offering">
+				<h3 class="feature__offering-benefit secure-feature">Building plans, Secured</h3>
+				<p class="feature__offering-copy">Access your building plans anywhere, anytime with encrypted data storage and transfers.</p>
+			</article>
+			<article class="feature__offering">
+				<h3 class="feature__offering-benefit haggle-feature">No haggling with vendors</h3>
+				<p class="feature__offering-copy">Interface with expert vendors at your convenience. All bids meet your needs - no more dealing with inadequate bids.</p>
+			</article>
 		</div>
 	</section>
   </main>
