added artifacts to timeline

--- a/ravti.html
+++ b/ravti.html
@@ -15,11 +15,21 @@
   		<!-- @include _signature -->
 	  	<h1 class="timeline__title">Ravti Website Design</h1>
 
+	  	<article class="timeline__period">
+		  	<h2 class="timeline__period-topic">Designing/Iterating in browser</h2>
+		  	<span class="timeline__period-date">October 16, 2014</span>
+		  	<dl class="timline__period-list">
+		  		<dd><a href="http://cdn2.dropmark.com/72454/ffa3dbccfac6c9f387c3d790f5087f9e516693a0/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Small Screen</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/7006775170071ad992eaf169086ecafd868ea72a/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Wide Screen</a></dd>
+		  	</dl>
+	  	</article>
+
 		<article class="timeline__period">
-		  	<h2 class="timeline__period-topic">Designing/Deciding in the browser</h2>
+		  	<h2 class="timeline__period-topic">Designing/Iterating in browser</h2>
 		  	<span class="timeline__period-date">October 15, 2014</span>
 		  	<dl class="timline__period-list">
-		  		<dd><a href="/ravti/discussion/hero-1.html">V1</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/47fe669c9a05ee4a4e459214d9cc50484d4e5992/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Small Screen</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/3613e83594a69511dc2e0d0fe8b7695f86757553/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Wide Screen</a></dd>
 		  	</dl>
 	  	</article>
 
@@ -28,7 +38,7 @@
 		  	<span class="timeline__period-date">October 14, 2014</span>
 		  	<a href="http://cdn2.dropmark.com/72454/0451b7487cbf7de8ca58ab3ce19a62080135e2df/Screen%20Shot%202014-10-14%20at%207.49.37%20PM.png">
 	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/0451b7487cbf7de8ca58ab3ce19a62080135e2df/Screen%20Shot%202014-10-14%20at%207.49.37%20PM.png" />
-	  	</a>
+	  		</a>
 	  	</article>
 
 	  	<article class="timeline__period">
