type nuances and key value layout cards

--- a/ravti/discussion/hero-1.html
+++ b/ravti/discussion/hero-1.html
@@ -48,7 +48,7 @@
 				<input class="interest__form-field-text" type="text" placeholder="Phone">
 			</div>
 			<div class="interest__form-field">
-				<button class="interest__form-button">Submit</button>
+				<button class="interest__form-button">Get in touch</button>
 			</div>
 		</form>
 	</section>
@@ -86,7 +86,7 @@
 				<p class="feature__offering-copy">Time is money. All of your HVAC needs with the click of a button - the days of picking up the phone to call vendors are over.</p>
 			</article>
 			<article class="feature__offering">
-				<h3 class="feature__offering-benefit cloud-feature">Inventory management from anywhere</h3>
+				<h3 class="feature__offering-benefit cloud-feature">Web-based Inventory</h3>
 				<p class="feature__offering-copy">All of your facilities' equipment is stored on the cloud; around the clock access to your inventory.</p>
 			</article>
 			<article class="feature__offering">
