updates to project timeline

--- a/ravti.html
+++ b/ravti.html
@@ -14,12 +14,20 @@
   	<section class="timeline">
   		<!-- @include _signature -->
 	  	<h1 class="timeline__title">Ravti Website Design</h1>
-	  	
+
 	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">W.I.P.</h2>
 		  	<span class="timeline__period-date">Happening Now</span>
 		  	<dl class="timline__period-list">
 		  		<dd><a href="/ravti/discussion/hero-1.html">Current State</a></dd>
+		  	</dl>
+	  	</article>
+
+	  	<article class="timeline__period">
+		  	<h2 class="timeline__period-topic">Contact Request</h2>
+		  	<span class="timeline__period-date">October 17. 2014</span>
+		  	<dl class="timline__period-list">
+		  		<dd><a href="/ravti/discussion/request.html">Form Layout w/ proofing</a></dd>
 		  	</dl>
 	  	</article>
 
