--- a/ravti.html
+++ b/ravti.html
@@ -16,18 +16,18 @@
 	  	<h1 class="timeline__title">Ravti Website Design</h1>
 
 	  	<article class="timeline__period">
-		  	<h2 class="timeline__period-topic">W.I.P.</h2>
-		  	<span class="timeline__period-date">Happening Now</span>
+		  	<h2 class="timeline__period-topic">Corporate Site</h2>
+		  	<span class="timeline__period-date">W.I.P.</span>
 		  	<dl class="timline__period-list">
-		  		<dd><a href="/ravti/discussion/hero-1.html">Current State</a></dd>
+		  		<dd><a href="/ravti/discussion/hero-1.html">View Live</a></dd>
 		  	</dl>
 	  	</article>
 
 	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">Contact Request</h2>
-		  	<span class="timeline__period-date">October 17. 2014</span>
+		  	<span class="timeline__period-date">W.I.P.</span>
 		  	<dl class="timline__period-list">
-		  		<dd><a href="/ravti/discussion/request.html">Form Layout w/ proofing</a></dd>
+		  		<dd><a href="/ravti/discussion/request.html">Form w/ proofing</a></dd>
 		  	</dl>
 	  	</article>
 
@@ -35,8 +35,8 @@
 		  	<h2 class="timeline__period-topic">Designing/Iterating in browser</h2>
 		  	<span class="timeline__period-date">October 16, 2014</span>
 		  	<dl class="timline__period-list">
-		  		<dd><a href="http://cdn2.dropmark.com/72454/ffa3dbccfac6c9f387c3d790f5087f9e516693a0/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Small Screen</a></dd>
-		  		<dd><a href="http://cdn2.dropmark.com/72454/7006775170071ad992eaf169086ecafd868ea72a/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Wide Screen</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/ffa3dbccfac6c9f387c3d790f5087f9e516693a0/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Screen Grab (Small Screen)</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/7006775170071ad992eaf169086ecafd868ea72a/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Screen Grab (Wide Screen)</a></dd>
 		  	</dl>
 	  	</article>
 
@@ -44,8 +44,8 @@
 		  	<h2 class="timeline__period-topic">Designing/Iterating in browser</h2>
 		  	<span class="timeline__period-date">October 15, 2014</span>
 		  	<dl class="timline__period-list">
-		  		<dd><a href="http://cdn2.dropmark.com/72454/47fe669c9a05ee4a4e459214d9cc50484d4e5992/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Small Screen</a></dd>
-		  		<dd><a href="http://cdn2.dropmark.com/72454/3613e83594a69511dc2e0d0fe8b7695f86757553/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Wide Screen</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/47fe669c9a05ee4a4e459214d9cc50484d4e5992/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Screen Grab (Small Screen)</a></dd>
+		  		<dd><a href="http://cdn2.dropmark.com/72454/3613e83594a69511dc2e0d0fe8b7695f86757553/Ravti%20%7C%20Digitize%20Your%20HVAC.png">Screen Grab (Wide Screen)</a></dd>
 		  	</dl>
 	  	</article>
 
