--- a/ravti/discussion/request.html
+++ b/ravti/discussion/request.html
@@ -20,6 +20,7 @@
 	</header>
 	<header class="request">
 		<h2 class="request__tagline">Let us help with your next project.</h2>
+		<p class="request__tagline-subhead">Tell us about your operation, and we'll be sure to follow-up.</p>
 	</header>
 	<section class="request__proof">
 		<article class="request__proof-point">
@@ -50,8 +51,7 @@
 		</div>
 		<div class="request__form-field">
 			<label class="request__form-field-label">Please enter a brief project description</label>
-			<textarea class="request__form-field-input" type="text" placeholder="Phone">
-			</textarea>
+			<textarea class="request__form-field-input"></textarea>
 		</div>
 		<div class="request__form-field">
 			<button class="request__form-button">Get in touch</button>
