form button copy

--- a/ravti/discussion/request.html
+++ b/ravti/discussion/request.html
@@ -54,7 +54,7 @@
 			<textarea class="request__form-field-input"></textarea>
 		</div>
 		<div class="request__form-field">
-			<button class="request__form-button">Get in touch</button>
+			<button class="request__form-button">Submit</button>
 		</div>
 	</form>
   </main>
