mobile spacing for request form

--- a/ravti/discussion/request.html
+++ b/ravti/discussion/request.html
@@ -19,8 +19,8 @@
 	  	</nav>
 	</header>
 	<header class="request">
-		<h2 class="request__tagline">Let us help with your next project.</h2>
-		<p class="request__tagline-subhead">Tell us about your operation, and we'll be sure to follow-up.</p>
+		<h2 class="request__tagline">Let us help</h2>
+		<p class="request__tagline-subhead">Tell us about your next project, and we'll be sure to get in touch.</p>
 	</header>
 	<section class="request__proof">
 		<article class="request__proof-point">
