--- a/ravti/discussion/corporate.html
+++ b/ravti/discussion/corporate.html
@@ -14,7 +14,7 @@
   	<section class="hero">
 	  	<header class="masthead">
 	  		<h1 class="masthead__logo">
-	  			<a href="/" title="Ravti"></a>
+	  			<a href="/ravti/discussion/corporate.html" title="Ravti"></a>
 	  		</h1>
 	  		<nav class="masthead__pages">
 	  			<ul class="masthead__pages-list">
@@ -103,9 +103,7 @@
 		<footer class="footer">
 	  		<nav class="footer__pages">
 	  			<ul class="footer__pages-list">
-	  				<li class="footer__pages-list-item">About</li>
-	  				<li class="footer__pages-list-item">Jobs</li>
-	  				<li class="footer__pages-list-item">Press</li>
+	  				<li class="footer__pages-list-item"><a href="/ravti/discussion/jobs.html">Work at Ravti</a></li>
 	  				<li class="footer__pages-list-item">Contact</li>
 	  			</ul>
 	  		</nav>
