--- a/ravti/discussion/capture.html
+++ b/ravti/discussion/capture.html
@@ -14,7 +14,7 @@
   	<header class="nav">
 	  	<nav class="banner">
 	  		<h1 class="banner__logo">
-	  			<a href="/" title="Ravti"></a>
+	  			<a href="/ravti/discussion/corporate.html" title="Ravti" title="Ravti"></a>
 	  		</h1>
 	  	</nav>
 	</header>
