updates to links, type

--- a/ravti/discussion/corporate.html
+++ b/ravti/discussion/corporate.html
@@ -110,8 +110,7 @@
 	  		<nav class="footer__law">
 	  			<ul class="footer__law-list">
 	  				<li class="footer__law-list-item">&copy; Ravti, Inc. 2014</li>
-	  				<li class="footer__law-list-item">Privacy</li>
-	  				<li class="footer__law-list-item">Terms</li>
+	  				<li class="footer__law-list-item"><a href="/ravti/discussion/privacy.html">Privacy</a></li>
 	  			</ul>
 	  		</nav>
 	  	</footer>
