--- a/ravti/discussion/jobs.html
+++ b/ravti/discussion/jobs.html
@@ -33,7 +33,7 @@
 	</section>
 	<section class="text">
 		<h2 class="text__title">Come Join Us</h2>
-		<p>Our team has great understanding of the commercial HVAC space. It's a $100+ Billion industry working with tools built a century prior. We're here to change that, and we could use your help. We have the support and financial backing of top-tier venture capital firms and angel investors. We dream big. We love to compete. We like to have fun. If any of our current openings hit home with you, drop us a note &mdash; we'd love to chat.</p>
+		<p>Our team has great understanding of the commercial HVAC space. It's a $100+ Billion industry where their professional tools are over a century old. We're here to change that, and we could use your help. We have the support and financial backing of top-tier venture capital firms and angel investors. We dream big. We love to compete. We like to have fun. If any of our current openings hit home with you, drop us a note &mdash; we'd love to chat.</p>
 		<section class="jobs">
 			<article class="jobs__list">
 				<h3 class="text__accent">Product</h3>
