contact request page

--- a/ravti/discussion/corporate.html
+++ b/ravti/discussion/corporate.html
@@ -99,22 +99,7 @@
 			</article>
 		</div>
 	</section>
-	<section class="page-footer">
-		<footer class="footer">
-	  		<nav class="footer__pages">
-	  			<ul class="footer__pages-list">
-	  				<li class="footer__pages-list-item"><a href="/ravti/discussion/jobs.html">Work at Ravti</a></li>
-	  				<li class="footer__pages-list-item">Contact</li>
-	  			</ul>
-	  		</nav>
-	  		<nav class="footer__law">
-	  			<ul class="footer__law-list">
-	  				<li class="footer__law-list-item">&copy; Ravti, Inc. 2014</li>
-	  				<li class="footer__law-list-item"><a href="/ravti/discussion/privacy.html">Privacy</a></li>
-	  			</ul>
-	  		</nav>
-	  	</footer>
-	</section>
+	<!-- @include _footer -->
   </main>
 </body>
 </html>
