footer rendering for safari

--- a/ravti/discussion/privacy.html
+++ b/ravti/discussion/privacy.html
@@ -110,6 +110,7 @@
 		<h3 class="text__accent">Questions and how to contact us</h3>
 		<p>If you have any questions, concerns, complaints or suggestions regarding our Privacy Policy or otherwise need to contact us, please Contact Us, email us at legal@ravti.com, call us at 1-866-202-2539, or contact us by US postal mail at the following address: Ravti Legal Department 5003 W Spring Lake Drive Tampa, Florida 33629</p>
 	</section>
+	<!-- @include _footer -->
   </main>
 </body>
 </html>
