updates to project timeline

--- a/ravti/discussion/accept-invite.html
+++ b/ravti/discussion/accept-invite.html
@@ -25,12 +25,12 @@
 		<section class="invite__form-name">
 			<div class="invite__form-field">
 				<label class="invite__form-field-label">First Name</label>
-				<input class="invite__form-field-input" type="text" placeholder="Johnny">
+				<input class="invite__form-field-input" type="text" placeholder="John">
 				<span class="invite__form-field-inform-text">This is helper text, appears grey. The layout is structured so if this is long, it bumps all the cells down, maintaining input field alignment.</span>
 			</div>
 			<div class="invite__form-field">
 				<label class="invite__form-field-label">Last Name</label>
-				<input class="invite__form-field-input" type="text" placeholder="Appleseed">
+				<input class="invite__form-field-input" type="text" placeholder="Deere">
 				<span class="invite__form-field-inform-text is-hidden">Last Name</span>
 			</div>
 		</section>
