--- a/ravti/discussion/capture.html
+++ b/ravti/discussion/capture.html
@@ -20,7 +20,7 @@
 	</header>
 	<header class="capture">
 		<h2 class="capture__tagline">Let us help</h2>
-		<p class="capture__tagline-subhead">Tell us about your next project, and we'll be sure to get in touch.</p>
+		<p class="capture__tagline-subhead">Tell us about your next project and we'll get in touch.</p>
 	</header>
 	<section class="split">
 		<section class="capture__proof">
