WIP updating timeline links

--- a/ravti.html
+++ b/ravti.html
@@ -19,11 +19,19 @@
 		  	<h2 class="timeline__period-topic">Live Views</h2>
 		  	<span class="timeline__period-date">W.I.P.</span>
 		  	<dl class="timline__period-list">
-		  		<dd><a href="/ravti/homepage/ravti/corporate.html">Corporate Site</a></dd>
-		  		<dd><a href="/ravti/discussion/capture.html">Contact Request Form</a></dd>
-		  		<dd><a href="/ravti/discussion/sign-in.html">Sign In / Request Password</a></dd>
-		  		<dd><a href="/ravti/discussion/accept-invite.html">Accept Invite</a></dd>
+		  		<dd><a href="/ravti/homepage/discussion/corporate.html">Corporate Site</a></dd>
+		  		<dd><a href="/ravti/hompage/discussion/capture.html">Contact Request Form</a></dd>
+		  		<dd><a href="/ravti/hompage/discussion/sign-in.html">Sign In / Request Password</a></dd>
+		  		<dd><a href="/ravti/homepage/discussion/accept-invite.html">Accept Invite</a></dd>
 		  	</dl>
+	  	</article>
+
+	  	<article class="timeline__period">
+		  	<h2 class="timeline__period-topic">Pattern Library</h2>
+		  	<span class="timeline__period-date">October 30, 2014</span>
+		  	<a href="http://cdn2.dropmark.com/72454/6b4caaaef26afe9ca4314c1cc928fde571fc9628/full-view-form.jpg">
+	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/b161ef233aa05ca2ea33854fb0f173b47962a3e6/form-tease.png" />
+	  		</a>
 	  	</article>
 
 	  	<article class="timeline__period">
