--- a/ravti.html
+++ b/ravti.html
@@ -30,8 +30,8 @@
 	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">Pattern Library</h2>
 		  	<span class="timeline__period-date">October 30, 2014</span>
-		  	<a href="http://cdn2.dropmark.com/72454/6b4caaaef26afe9ca4314c1cc928fde571fc9628/full-view-form.jpg">
-	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/b161ef233aa05ca2ea33854fb0f173b47962a3e6/form-tease.png" />
+		  	<a href="/ravti/pattern-library/index.html">
+	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/b353ff7a315b4391791406c0dee4c9321795ba6b/Screen%20Shot%202014-11-12%20at%204.20.48%20PM.png" />
 	  		</a>
 	  	</article>
 
