--- a/ravti.html
+++ b/ravti.html
@@ -13,7 +13,7 @@
   <main>
   	<section class="timeline">
   		<!-- @include _signature -->
-	  	<h1 class="timeline__title">Ravti Website Design</h1>
+	  	<h1 class="timeline__title">Ravti Design/Process Artifacts</h1>
 
 	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">Live Views</h2>
@@ -25,6 +25,17 @@
 		  		<dd><a href="/ravti/homepage/discussion/accept-invite.html">Accept Invite</a></dd>
 		  		<dd><a href="/ravti/pattern-library/index.html">Pattern Library</a></dd>
 		  	</dl>
+	  	</article>
+
+	  	<article class="timeline__period">
+		  	<h2 class="timeline__period-topic">Element Explorations: App Navigation (High-Level)</h2>
+		  	<span class="timeline__period-date">November 5, 2014</span>
+		  	<a href="/assets/app-scaffolding.jpg">
+	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/dd43b5fb5974fc034d992ba6835606b587c2935e/Screen%20Shot%202014-11-13%20at%208.10.11%20PM.png" />
+	  		</a>
+	  		<a href="http://cdn2.dropmark.com/72454/b4dcb996935d0161d7a8c1b328f2b4a5acb5a940/mobile.png">
+	  		<img class="timeline__image" src="http://cdn2.dropmark.com/72454/b4dcb996935d0161d7a8c1b328f2b4a5acb5a940/mobile.png" />
+	  		</a>
 	  	</article>
 
 	  	<article class="timeline__period">
