--- a/ravti.html
+++ b/ravti.html
@@ -13,7 +13,7 @@
   <main>
   	<section class="timeline">
   		<!-- @include _signature -->
-	  	<h1 class="timeline__title">Ravti Design/Process Artifacts</h1>
+	  	<h1 class="timeline__title">Ravti Process Artifacts</h1>
 
 	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">Live Views</h2>
