--- a/ravti.html
+++ b/ravti.html
@@ -24,8 +24,8 @@
 		  		<dd><a href="/ravti/ravti-redesign/">Owner Dash</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/vendor-dash.html">Vendor Dash</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/rfq-invite.html">Vendor Invite</a></dd>
-		  		<dd><a href="/ravti/ravti-redesign/onboard-dashboard.html">New User Onboarding (Desktop)</a></dd>
-		  		<dd><a href="/ravti/ravti-redesign/onboard-1.html">New User Onboarding (Mobile)</a></dd>
+		  		<dd><a href="/ravti/ravti-redesign/onboard-dashboard.html">User Onboarding (Desktop)</a></dd>
+		  		<dd><a href="/ravti/ravti-redesign/onboard-1.html">User Onboarding (Mobile)</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/proposal.html">Single Document Proposal</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/proposal-dual-scope.html">Dual Document Proposal</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/proposal-multi-scope.html">Multi-Document Proposal</a></dd>
