--- a/ravti.html
+++ b/ravti.html
@@ -39,7 +39,7 @@
 
 	  	<article class="timeline__period">
 		  	<h2 class="timeline__period-topic">IxD: Various Interactions/Flows</h2>
-		  	<span class="timeline__period-date">An on-going stream<br><b>PASSWORD IS: scrong</b></span>
+		  	<span class="timeline__period-date">An on-going stream, started December 1, 2014<br><b>PASSWORD IS: scrong</b></span>
 		  	<iframe class="timeline__period-video" src="//player.vimeo.com/video/119794374?byline=0&portrait=0" width="500" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		  	<iframe class="timeline__period-video" src="//player.vimeo.com/video/120118245?byline=0&portrait=0" width="500" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		  	<iframe class="timeline__period-video" src="//player.vimeo.com/video/120118252?color=ffffff&byline=0&portrait=0" width="500" height="270" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
