updated directory of pages

--- a/ravti.html
+++ b/ravti.html
@@ -23,7 +23,9 @@
 		  		<dd><a href="http://www.ravti.com">Corporate Site</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/">Owner Dash</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/vendor-dash.html">Vendor Dash</a></dd>
-		  		<dd><a href="/ravti/ravti-redesign/rfq-invite.html">Vendor Invite</a></dd>
+		  		<dd><a href="/ravti/ravti-redesign/vendor-email.html">Vendor Invite Email</a></dd>
+		  		<dd><a href="/ravti/ravti-redesign/vendor-signup.html">Vendor Invite Signup</a></dd>
+		  		<dd><a href="/ravti/ravti-redesign/rfq-invite.html">Vendor Invite to Bid</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/onboard-dashboard.html">User Onboarding (Desktop)</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/onboard-1.html">User Onboarding (Mobile)</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/proposal.html">Single Document Proposal</a></dd>
@@ -33,6 +35,7 @@
 		  		<dd><a href="/ravti/ravti-redesign/timeline.html">Job Timeline</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/billing.html">Outstanding Payments</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/invoice.html">Invoice</a></dd>
+		  		<dd><a href="/ravti/ravti-redesign/events.html">Events</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/404.html">404</a></dd>
 		  		<dd><a href="/ravti/ravti-redesign/500.html">500</a></dd>
 		  		<dd><a href="/ravti/pattern-library/index.html">Pattern Library</a></dd>
